syntax = "proto3";

package ayborg.gateway.agent.v1;

message PortDto {
    string id = 1;
    string name = 2;
    int32 direction = 3;
    int32 brand = 4;
    bool is_connected = 5;
    bool is_link_convertable = 6;
    string value = 7;
}
